fix RPC请求额外信息